# Mapping-Multiple-LSTM-Models-on-FPGAs

./: .gitignore  CMakeLists.txt  README.md  make_hls.py  run_hls.tcl  run_hls_test.tcl  token
cmake/Modules/: FindOpenCv.cmake  FindVitis.cmake  FindVivado.cmake
include/: svd_ip.h  svd_params.h
include/dma/: axis_lib.h  svd_dma.h  width_converter.h
include/hls_utils/: adder_tree.h  dot_prod_dsp.h  hls_debugging.h  hls_metaprogramming.h  hw_timer.h  priority_encoder.h
include/kernel/: gemv_kernel.h  s_kernel.h  svd_kernel.h  u_kernel.h  v_kernel.h
include/layers/dense/hls/: dense_svd.h
include/layers/lstm/: lstm_data_handler.h
include/layers/lstm/hls/: lstm_hardware.h  lstm_svd.h  lstm_svd_emulator.h
include/layers/lstm/sw/: soft_lstm.h  soft_lstm_svd.h
include/lstm/: lstm_data_handler.h
include/lstm/hls/: lstm_hardware.h  lstm_svd.h  lstm_svd_emulator.h
include/lstm/sw/: soft_lstm.h  soft_lstm_svd.h  soft_svd_model.h
include/math_utils/: activation_functions.h  blas_utils.h  data_handler.h
include/testbenches/: test_dense_svd.h  test_lstm_svd.h  test_svd_kernel.h  test_u_kernel.h  test_u_kernel_pruned.h  test_v_kernel.h  test_v_kernel_pruned.h
pynq/: README.md
pynq/dense_svd/: dense_svd.ipynb
pynq/dense_svd/overlay/: dense_svd.bit  dense_svd.hwh  dense_svd.tcl
pynq/kernel_svd/: kernel_svd.ipynb
pynq/kernel_svd/overlay/: kernel_svd.bit  kernel_svd.hwh  kernel_svd.tcl
pynq/kernel_u/: kernel_u.ipynb  kernel_u_hier.ipynb
pynq/kernel_u/overlay/: kernel_u.bit  kernel_u.hwh  kernel_u.tcl
pynq/kernel_v/: kernel_v.ipynb
pynq/kernel_v/overlay/: kernel_v.bit  kernel_v.hwh  kernel_v.tcl
python/: README.md  svd_approximation.py
python/roofline/: README.md
src/: CMakeLists.txt  svd.cpp  svd_ip.cpp  svd_params.cpp
src/dma/: CMakeLists.txt  axis_lib.cpp  svd_dma.cpp  width_converter.cpp
src/hls_utils/: CMakeLists.txt  adder_tree.cpp  dot_prod_dsp.cpp  hw_timer.cpp
src/kernel/: CMakeLists.txt  README.md  gemv_kernel.cpp  s_kernel.cpp  svd_kernel.cpp  u_kernel.cpp  v_kernel.cpp
src/layers/: CMakeLists.txt
src/layers/dense/: CMakeLists.txt
src/layers/dense/hls/: CMakeLists.txt  dense_svd.cpp
src/layers/dense/sw/: CMakeLists.txt
src/layers/lstm/: CMakeLists.txt  lstm_data_handler.cpp
src/layers/lstm/hls/: CMakeLists.txt  lstm_hardware.cpp  lstm_svd.cpp  lstm_svd_emulator.cpp
src/layers/lstm/sw/: CMakeLists.txt  soft_lstm.cpp  soft_lstm_svd.cpp
src/lstm/: CMakeLists.txt  README.md  lstm_data_handler.cpp
src/lstm/hls/: CMakeLists.txt  lstm_hardware.cpp  lstm_svd.cpp  lstm_svd_emulator.cpp
src/lstm/sw/: CMakeLists.txt  soft_lstm.cpp  soft_lstm_svd.cpp  soft_svd_model.cpp
src/math_utils/: CMakeLists.txt  activation_functions.cpp  blas_utils.cpp  data_handler.cpp
src/testbenches/: CMakeLists.txt  test_dense_svd.cpp  test_gemv_kernel.cpp  test_lstm_svd.cpp  test_svd_kernel.cpp  test_u_kernel.cpp  test_u_kernel_pruned.cpp  test_v_kernel.cpp  test_v_kernel_pruned.cpp
tcl/: lstm_params.tcl  utils.tcl
