cmake_minimum_required(VERSION 3.10)
add_subdirectory(dma)
add_subdirectory(kernel)
add_subdirectory(lstm)
add_subdirectory(math_utils)
add_subdirectory(hls_utils)
add_subdirectory(testbenches)

# NOTE: Each library/object will have an identifier and that identifier will then
# be used to link the final executable, i.e. target_link_libraries(ProjectName LibraryName)

add_library(SVD_PARAMS STATIC ${CMAKE_SOURCE_DIR}/src/svd_ip.cpp)
target_include_directories(SVD_PARAMS PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(SVD_PARAMS PUBLIC ${VIVADO_INCLUDE_DIRS})
target_include_directories(SVD_PARAMS PUBLIC ${OpenCv_INCLUDE_DIRS})
target_link_libraries(SVD_PARAMS ${OpenCv_LIBS})
target_compile_options(SVD_PARAMS PRIVATE -fno-builtin)

add_library(SVD_IP STATIC ${CMAKE_SOURCE_DIR}/src/svd_ip.cpp)
target_include_directories(SVD_IP PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(SVD_IP PUBLIC ${VIVADO_INCLUDE_DIRS})
target_include_directories(SVD_IP PUBLIC ${OpenCv_INCLUDE_DIRS})
target_link_libraries(SVD_IP ${OpenCv_LIBS})
target_compile_options(SVD_IP PRIVATE -fno-builtin)
target_link_libraries(SVD_IP SVD_KERNEL)

add_library(SVD STATIC ${CMAKE_SOURCE_DIR}/src/svd.cpp)
target_include_directories(SVD PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(SVD PUBLIC ${VIVADO_INCLUDE_DIRS})
target_include_directories(SVD PUBLIC ${OpenCv_INCLUDE_DIRS})
target_compile_options(SVD PRIVATE -fno-builtin)
target_link_libraries(SVD ${OpenCv_LIBS})
target_link_libraries(SVD SVD_IP)
target_link_libraries(SVD LSTM_SVD)
target_link_libraries(SVD LSTM_SVD_EMULATOR)
target_link_libraries(SVD SOFT_LSTM_SVD)
