cmake_minimum_required(VERSION 3.10)

add_library(DOT_PROD_DSP STATIC ${CMAKE_SOURCE_DIR}/src/hls_utils/dot_prod_dsp.cpp)
target_include_directories(DOT_PROD_DSP PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(DOT_PROD_DSP PUBLIC ${VIVADO_INCLUDE_DIRS})
target_include_directories(DOT_PROD_DSP PUBLIC ${OpenCv_INCLUDE_DIRS})
target_compile_options(DOT_PROD_DSP PRIVATE -fno-builtin)
# target_link_libraries(DOT_PROD_DSP ${OpenCv_LIBS})

add_library(HW_TIMER STATIC ${CMAKE_SOURCE_DIR}/src/hls_utils/hw_timer.cpp)
target_include_directories(HW_TIMER PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(HW_TIMER PUBLIC ${VIVADO_INCLUDE_DIRS})
target_include_directories(HW_TIMER PUBLIC ${OpenCv_INCLUDE_DIRS})
target_compile_options(HW_TIMER PRIVATE -fno-builtin)

add_library(ADDER_TREE STATIC ${CMAKE_SOURCE_DIR}/src/hls_utils/adder_tree.cpp)
target_include_directories(ADDER_TREE PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(ADDER_TREE PUBLIC ${VIVADO_INCLUDE_DIRS})
target_include_directories(ADDER_TREE PUBLIC ${OpenCv_INCLUDE_DIRS})
target_compile_options(ADDER_TREE PRIVATE -fno-builtin)