cmake_minimum_required(VERSION 3.10)

add_library(BLAS_UTILS STATIC ${CMAKE_SOURCE_DIR}/src/math_utils/blas_utils.cpp)
target_include_directories(BLAS_UTILS PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(BLAS_UTILS PUBLIC ${HLS_INCLUDE_DIRS})
target_include_directories(BLAS_UTILS PUBLIC ${OpenCv_INCLUDE_DIRS})
target_link_libraries(BLAS_UTILS ${OpenCv_LIBS})

add_library(ACTIVATION_FUNCTIONS STATIC ${CMAKE_SOURCE_DIR}/src/math_utils/activation_functions.cpp)
target_include_directories(ACTIVATION_FUNCTIONS PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(ACTIVATION_FUNCTIONS PUBLIC ${HLS_INCLUDE_DIRS})
target_include_directories(ACTIVATION_FUNCTIONS PUBLIC ${OpenCv_INCLUDE_DIRS})
target_link_libraries(ACTIVATION_FUNCTIONS ${OpenCv_LIBS})

add_library(DATA_HANDLER STATIC ${CMAKE_SOURCE_DIR}/src/math_utils/data_handler.cpp)
target_include_directories(DATA_HANDLER PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(DATA_HANDLER PUBLIC ${HLS_INCLUDE_DIRS})
target_include_directories(DATA_HANDLER PUBLIC ${OpenCv_INCLUDE_DIRS})
target_link_libraries(DATA_HANDLER ${OpenCv_LIBS})

# # add_test(NAME TestOpenCv COMMAND OPENCV_TEST)
# # add_test(NAME TestAxisLib COMMAND TEST_AXIS_LIB)
# # add_test(NAME TestConvLayer COMMAND TEST_CONV_LAYER)
# add_test(NAME TestDenseLayer COMMAND TEST_DENSE_LAYER)
# # add_test(NAME TestDQNet COMMAND TEST_DQNET)
# # add_test(NAME TestGame COMMAND TEST_GAME)
# # add_test(NAME TestPong COMMAND TEST_PONG)