cmake_minimum_required(VERSION 3.10)

add_executable(TEST_U_KERNEL ${CMAKE_SOURCE_DIR}/src/testbenches/test_u_kernel.cpp)
target_include_directories(TEST_U_KERNEL PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(TEST_U_KERNEL PUBLIC ${HLS_INCLUDE_DIRS})
target_include_directories(TEST_U_KERNEL PUBLIC ${OpenCv_INCLUDE_DIRS})
target_link_libraries(TEST_U_KERNEL ${OpenCv_LIBS})
target_link_libraries(TEST_U_KERNEL U_KERNEL)

add_executable(TEST_V_KERNEL ${CMAKE_SOURCE_DIR}/src/testbenches/test_v_kernel.cpp)
target_include_directories(TEST_V_KERNEL PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(TEST_V_KERNEL PUBLIC ${HLS_INCLUDE_DIRS})
target_include_directories(TEST_V_KERNEL PUBLIC ${OpenCv_INCLUDE_DIRS})
target_link_libraries(TEST_V_KERNEL ${OpenCv_LIBS})
target_link_libraries(TEST_V_KERNEL V_KERNEL)

add_executable(TEST_GEMV_KERNEL ${CMAKE_SOURCE_DIR}/src/testbenches/test_gemv_kernel.cpp)
target_include_directories(TEST_GEMV_KERNEL PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(TEST_GEMV_KERNEL PUBLIC ${HLS_INCLUDE_DIRS})
target_include_directories(TEST_GEMV_KERNEL PUBLIC ${OpenCv_INCLUDE_DIRS})
target_link_libraries(TEST_GEMV_KERNEL ${OpenCv_LIBS})
target_link_libraries(TEST_GEMV_KERNEL GEMV_KERNEL)

add_executable(TEST_DENSE_SVD ${CMAKE_SOURCE_DIR}/src/testbenches/test_dense_svd.cpp)
target_include_directories(TEST_DENSE_SVD PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(TEST_DENSE_SVD PUBLIC ${HLS_INCLUDE_DIRS})
target_include_directories(TEST_DENSE_SVD PUBLIC ${OpenCv_INCLUDE_DIRS})
target_link_libraries(TEST_DENSE_SVD ${OpenCv_LIBS})
target_link_libraries(TEST_DENSE_SVD DENSE_SVD)

add_test(NAME TestU_Kernel COMMAND TEST_U_KERNEL)
add_test(NAME TestV_Kernel COMMAND TEST_V_KERNEL)
add_test(NAME TestGemvKernel COMMAND TEST_GEMV_KERNEL)
add_test(NAME TestDenseSvd COMMAND TEST_DENSE_SVD)